kubernetes/test/app-test-deployment-flask.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  labels:
    app: flask-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
        - name: flask-container
          image: broccolisoup/flask_final:latest
          ports:
            - containerPort: 5000
          env:
            - name: FLASK_ENV
              value: production
            - name: REDIS_HOST
              value: redis-db   # ✅ updated here
            - name: REDIS_PORT
              value: "6379"
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
