kubernetes/test/app-test-service-flask.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
  namespace: vbetala6276
spec:
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
