kubernetes/test/app-test-service-redis.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-db
  namespace: tproctor560
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
